--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,6 @@ dependencies = [
     "baml>=1.0.0",
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
-    "pyaudio>=0.2.11",
-    "sounddevice>=0.4.6",
     "asyncio-mqtt>=0.11.0",
     "aiohttp>=3.8.0",
     "pandas>=2.0.0",
@@ -24,6 +22,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+audio = [
+    "pyaudio>=0.2.11",
+    "sounddevice>=0.4.6",
+]
 dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
